# cpp_gc

./: CMakeLists.txt  LICENSE  README.md  gc_ptr.hpp
example/: CMakeLists.txt  main.cpp  some_lib.hpp
scripts/: clang_extras.py  gc_ptr_config.cmake  main.py
scripts/generated_src/example/: main.cpp
